--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "chatGPT",
-    "appid" : "",
+    "appid" : "__UNI__F3F020A",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -43,17 +43,22 @@
             /* ios打包配置 */
             "ios" : {},
             /* SDK配置 */
-            "sdkConfigs" : {}
+            "sdkConfigs" : {
+                "ad" : {
+                    "gdt" : {}
+                }
+            }
         }
     },
     /* 快应用特有相关 */
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "wxe95fdbf2b0886c68",
+        "appid" : "wx2df853ecc2cabbfd",
         "setting" : {
             "urlCheck" : false,
-            "minified" : true
+            "minified" : true,
+            "postcss" : true
         },
         "usingComponents" : true
     },
